--- a/index.html
+++ b/index.html
@@ -37,13 +37,13 @@
       <div class="contact-me">
         <h2>Get In Touch</h2>
         <h3>Are you like to do codng?</h3>
-        <div class="at">
 
 
-        <p>if you are intrested in making websites then you can contact.</p>
+
+        <p class="at">if you are intrested in making websites then you can contact.</p>
 </div class="btn">
         <a class="btn" href="atuly348@gmail.com">CONTACT ME</a>
-      </div>
+
     </div>
 
 
@@ -51,7 +51,7 @@
       <a class="footer-link" href="https://www.linkedin.com/in/atul-yadav-739182218/">LinkedIn</a>
       <a class="footer-link" href="https://twitter.com/atul_yadaavv">Twitter</a>
       <a class="footer-link" href="https://www.appbrewery.co/">Website</a>
-      <p>© 2022 Atul yadav.</p>
+      <p class="cpy">© 2022 Atul yadav.</p>
     </div>
 
   </body>
